--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,44 @@
 /*Global*/
-@font-face{
-    src:url(/fonts/AniMe\ Matrix\ Font.otf);
+@font-face {
+    src: url(/fonts/AniMe\ Matrix\ Font.otf);
     font-family: anime;
 
 }
-@font-face{
+
+@font-face {
     font-family: font2;
     src: url(/fonts/CasanovaScotia-Xm0K.ttf);
 }
-@font-face{
+
+@font-face {
     font-family: font3;
     src: url(/fonts/Neuterous-nRD9g.ttf);
 }
-@font-face{
+
+@font-face {
     font-family: font4;
     src: url(/fonts/Revamped-X3q1a.ttf);
 }
 
-@font-face{
+@font-face {
     font-family: font5;
     src: url(/fonts/FallingSkyBoldplusOblique-yxmV.otf);
 }
-@font-face{
+
+@font-face {
     font-family: font6;
     src: url(/fonts/JosefinSansRegular-x3LYV.ttf);
 }
 
-main{
+main {
     margin: 10px;
 }
 
-html{
+html {
     font-size: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-image: url("/images/anime-aesthetic-night-sky-iln70o2bg4sjlivl.jpg");
-    background-size:cover;
+    background-size: cover;
     color: white;
 }
 
@@ -44,87 +48,120 @@ a {
     font-weight: bolder;
 }
 
-.h3{
+.h3 {
     margin: 0px 0px;
     padding: 0px 0px;
 }
 
-.title{
+.title {
     font-family: font2;
     font-weight: lighter;
 }
 
-.p{
+.p {
     margin: 0px 0px;
 }
-.forum{
+
+.forum {
     background-color: rgba(92, 115, 123, 0.606);
     border-radius: 5px;
     padding: 2px 20px;
     margin: 10px auto 20px;
     font-size: 14px;
     font-family: font2;
-    
+
 }
 
-.main{
+.main {
     background-color: rgba(92, 115, 123, 0.606);
     border-radius: 5px;
     padding: 5px 5px;
     margin: auto;
 }
-.bottom{
+
+.bottom {
     display: flex;
     color: rgb(207, 230, 228);
 }
 
-.author{
+.author {
     padding-right: 10px;
     padding-left: 10px;
     margin: 0px;
 }
 
-.time-date{
+.time-date {
     padding-right: 10px;
     padding-left: 10px;
     margin: 0px;
 }
 
-.comment-no{
-    padding-right: 0 ;
+.comment-no {
+    padding-right: 0;
     padding-left: 10px;
     margin: 0px;
 }
 
 .ubutton {
-    background-color: rgba(16, 170, 2, 0.781); 
+    background-color: rgba(16, 170, 2, 0.781);
     padding: 3px 3px;
     text-align: center;
     display: inline-block;
     cursor: pointer;
     margin-left: auto;
 
-  }
+}
 
 .dbutton {
-    background-color: rgba(255, 48, 48, 0.596); 
+    background-color: rgba(255, 48, 48, 0.596);
     padding: 3px 3px;
     text-align: center;
     display: inline-block;
     cursor: pointer;
 }
 
-.row{
+.row {
     padding: 0px 5px;
 }
 
-.list{
+.list {
     padding: 0px 25px;
 }
 
 /*Navbar*/
 
-.HEAD{
+.HEAD {
+    width: 12ch;
+    animation: typing 1.5s steps(12) , blink .4s steps(12)  infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: anime;
+    margin: 10px 10px;
+    font-size: 45px;
+    padding: 0px;
+    
+}
+
+/* animating the logo  */
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to{
+        width: 12ch;
+    }
+}
+
+@keyframes blink {
+    50% {
+        border-color: transparent
+    }
+}
+
+
+/* .HEAD{
     font-family: anime;
     margin: 10px 10px ;
     font-size: 45px;
@@ -141,7 +178,7 @@ a {
     left:0;
     height:100%;
     width: 100%;
-    background: url(/images/anime-aesthetic-night-sky-iln70o2bg4sjlivl.jpg);
+    background: url(/images/bedge-grunge.png);
     background-size:contain;
     border-left: 2px solid white;
     animation: typing 5.0s steps(12) infinite;
@@ -153,14 +190,14 @@ a {
       100%{
         left: 0;
       }
-}
-.navbar{
+} */
+.navbar {
     display: grid;
     align-items: center;
-    
+
 }
 
-.navigation{
+.navigation {
     background-color: rgba(92, 115, 123, 0.606);
     border-radius: 5px;
     padding: 0px;
@@ -169,14 +206,14 @@ a {
 
 }
 
-.nav-list{
+.nav-list {
     list-style-type: none;
     overflow: hidden;
     padding-inline-start: 0px;
 }
 
-.nav-item a{
-    
+.nav-item a {
+
     float: left;
     display: block;
     text-align: center;
@@ -188,40 +225,41 @@ a {
     transition: background-color 0.2s;
 
 }
-.nav-item a:hover{
+
+.nav-item a:hover {
     background-color: rgba(50, 63, 67, 0.64);
     padding: 10px 10px;
     border-radius: 5px;
 }
 
-.fa-house{
+.fa-house {
     padding-right: 7px;
 
 }
 
-.fa-circle-info{
+.fa-circle-info {
     padding-right: 7px;
 }
 
-.fa-fire{
+.fa-fire {
     padding-right: 7px;
 }
 
-.fa-id-badge{
+.fa-id-badge {
     padding-right: 7px;
 }
 
-.fa-chevron-right{
+.fa-chevron-right {
     padding-right: 5px;
 }
 
-button{
+button {
     border-radius: 5px;
 }
 
 /*Add post section*/
 
-.main-2{
+.main-2 {
     background-color: rgba(92, 115, 123, 0.606);
     border-radius: 5px;
     padding: 5px 5px;
@@ -229,13 +267,13 @@ button{
     margin-bottom: 20px;
 }
 
-.title-2{
+.title-2 {
     font-family: font2;
     font-weight: lighter;
     padding-left: 10px;
 }
 
-textarea#p-title{
+textarea#p-title {
     background-color: rgba(46, 53, 56, 0.606);
     border-radius: 5px;
     width: 80%;
@@ -246,7 +284,7 @@ textarea#p-title{
     font-size: 25px;
 }
 
-textarea#p-description{
+textarea#p-description {
     background-color: rgba(46, 53, 56, 0.606);
     border-radius: 5px;
     width: 80%;
@@ -261,7 +299,7 @@ textarea#p-description{
     border-radius: 5px;
     background-color: rgba(42, 45, 42, 0.908);
     color: aliceblue;
-    font-family:font2;
+    font-family: font2;
     font-size: 12px;
     font-weight: lighter;
     margin-left: 20px;
