--- a/css/style3.css
+++ b/css/style3.css
@@ -93,12 +93,36 @@ a {
 
 /*Navbar*/
 
-.HEAD{
+.HEAD {
+    width: 12ch;
+    animation: typing 1.5s steps(12) , blink .4s steps(12)  infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
     font-family: anime;
-    margin: 10px 10px ;
+    margin: 10px 10px;
     font-size: 45px;
-    padding: 0px ;
+    padding: 0px;
+    
 }
+
+/* animating the logo  */
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to{
+        width: 12ch;
+    }
+}
+
+@keyframes blink {
+    50% {
+        border-color: transparent
+    }
+}
+
 
 
 .navbar{
