--- a/css/style2.css
+++ b/css/style2.css
@@ -68,6 +68,7 @@ a {
     margin: auto;
     font-size: 20px;
     font-family: font2;
+    word-wrap: break-word;
 }
 
 .th-description{
@@ -78,6 +79,7 @@ a {
     font-size: 15px;
     font-family: font5;
     font-weight: lighter;
+    word-wrap: break-word;
 
 }
 
@@ -89,6 +91,13 @@ a {
 }
 
 .author{
+    padding-top: 10px;
+    padding-right: 7px;
+    padding-left: 18px;
+    margin: 0px;
+}
+
+.seperator{
     padding-top: 10px;
     padding-right: 10px;
     padding-left: 18px;
@@ -106,7 +115,7 @@ a {
 .comment-no{
     padding-top: 10px;
     padding-right: 0 ;
-    padding-left: 12px;
+    padding-left: 7px;
     margin: 0px;
 }
 
@@ -174,6 +183,7 @@ textarea{
     margin-left: 20px;
     font-family: font5;
     font-weight: lighter;
+    word-wrap: break-word;
 }
 
 
@@ -277,4 +287,42 @@ textarea{
 
 button{
     border-radius: 5px;
+}
+
+
+/* For smartphones */
+@media screen and (max-width: 460px){
+
+    .author{
+        padding-top: 10px;
+        padding-right: 0px;
+        padding-left: 18px;
+        margin: 0px;
+        font-size: 10px;
+    }
+    
+    .seperator{
+        padding-top: 5px;
+        padding-right: 5px;
+        padding-left: 5px;
+        margin: 0px;
+        font-size: 12px;
+    }
+    
+    .time-date{
+        padding-top: 10px;
+        padding-right: 0px;
+        padding-left: 0px;
+        margin: 0px;
+        font-size: 10px;
+        
+    }
+    
+    .comment-no{
+        padding-top: 10px;
+        padding-right: 0 ;
+        padding-left: 0px;
+        margin: 0px;
+        font-size: 10px;
+    }
 }
